--- a/frontend.html
+++ b/frontend.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/58436A7D2D'>Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/58436A7D2D'>Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4373076002'>Job Application for Sr. Front-End Engineer (React/Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4373076002'>Job Application for Sr. Front-End Engineer (React/Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qualitest-1.workable.com/j/82437F3039'>QualiTest - Jobs: R&D Frontend Team Leader - Apply online</a></h5> 
+<h5><a href='https://qualitest-1.workable.com/j/82437F3039'>QualiTest - Jobs: R&D Frontend Team Leader - Apply online</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275746-frontend-developer'>Prospect Infosys Inc. Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275746-frontend-developer'>Prospect Infosys Inc. Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://intellectsoft.workable.com/j/971E7D2C95'>Intellectsoft - Jobs: Middle Front-end (Angular) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/971E7D2C95'>Intellectsoft - Jobs: Middle Front-end (Angular) - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv Palo Alto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -161,7 +161,7 @@ industry-leading SaaS based platform that solves a suite of provider data?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/239aed50-ebd5-4e73-bbb3-f4be512865ad'>Ancestry - Senior Software Engineer, Front-end</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/239aed50-ebd5-4e73-bbb3-f4be512865ad'>Ancestry - Senior Software Engineer, Front-end</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -205,7 +205,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692181363-senior-frontend-developer'>Bosch Group Senior Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692181363-senior-frontend-developer'>Bosch Group Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -219,7 +219,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 technologies, allowing our teams to train the ML models, and allowing analysts to 
 make?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
+<h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
@@ -254,7 +254,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/2dbhfhcvph/Front-End-Software-Engineer-II-Lehi-UT'>Front End Software Engineer II (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/2dbhfhcvph/Front-End-Software-Engineer-II-Lehi-UT'>Front End Software Engineer II (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -278,7 +278,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -417,7 +417,7 @@ the?...</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
